# canopy-seed

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  START CANOPY.bat  install.bat  install.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  start.py
canopy-ui/: app.js  devhub.html  hub.html  index.html  styles.css
config/: complexity_thresholds.json  model_pricing.json  profiles.py  settings.py
core/: agent_pool.py  ai_backend.py  api_server.py  auto_fix.py  brain_state.py  calibration.py  canopy_keys.py  complexity_judge.py  context.py  context_builder.py  engine.py  exceptions.py  extractor.py  logger.py  manager_tools.py  master_changelog.py  monitor.py  nl_action.py  nl_intent.py  orchestration_board.py  orchestrator.py  permissions.py  research_engine.py  router.py  sdk_reference.py  snapshot.py  swarm_tools.py  tester_swarm.py
docs/: CANOPY_SEED_ARCHITECTURE_GUIDE.md  CANOPY_SEED_EXPLAINER.md  FOUNDING_STORY.md
memory/: canopy.py  vault_store.py
skills/: base.py  example_skill.py  fetch.py  pyshell.py  registry.py  status.py  uptime.py
tests/: conftest.py  test_adr030_router.py  test_agent_pool_pipeline.py  test_agent_pool_safety.py  test_auto_fix.py  test_build_api.py  test_calibration.py  test_master_changelog.py  test_orchestrator_parse.py  test_session44.py  test_session45.py  test_session45_adr036.py  test_session46.py  test_session47_big_fixer_paths.py  test_session47_orchestrator_chain.py  test_session48_role_chains.py  test_session49_giant_brain_audit.py  test_session50_dispatch_and_giant_brain.py  (+9 more)
(+18 files in other folders)
